--- a/report.html
+++ b/report.html
@@ -588,7 +588,7 @@
     <script>
         // Go to homepage function
         function goHome() {
-            window.location.href = "index.html"; // You might want to change this to your homepage URL
+            window.location.href = "quiz.html"; // You might want to change this to your homepage URL
         }
 
         // ------ New Theme Switching Code ------
